fixed logo spacing and h1 sizing

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2115,7 +2115,8 @@ table.alt tbody tr td {
   #header.alt {
     padding: 7em 5em 4em 5em ; }
     #header.alt h1 {
-      font-size: 3.25em; }
+      font-size: 2em;
+      opacity: 0.45; }
     #header.alt > * {
       -moz-transition: opacity 3s ease;
       -webkit-transition: opacity 3s ease;
@@ -2140,7 +2141,8 @@ table.alt tbody tr td {
       #header.alt .logo img {
         display: block;
         margin: 0 auto;
-        max-width: 75%; }
+        min-width: 55%;
+        max-width: 95%; }
   @media screen and (max-width: 1280px) {
     #header {
       padding: 4em 4em 0.1em 4em ; }
